--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   },
   "dependencies": {
     "astro": "^3.0.0-beta.0"
+  },
+  "devDependencies": {
+    "@astrojs/sitemap": "^3.0.0-beta.0"
   }
 }
