--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@unpic/core": "^0.0.29",
     "astro": "^3.0.0-beta.0",
     "unpic": "^3.10.0"
   },
